[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sam3d_body"
version = "0.1.0"
description = "SAM 3D Body: Robust Full-Body Human Mesh Recovery"
authors = [{ name = "FAIR" }]
requires-python = ">=3.10"
dependencies = [
    "roma>=1.5.4",
]

[tool.hatch.build.targets.sdist]
include = ["sam_3d_body"]

[tool.hatch.build.targets.wheel]
include = ["sam_3d_body"]
